# Wancomm

./: .gitignore  BUILD.md  CMakeLists.txt  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  README_OLD.md  README_SPLIT.md  REDESIGN_SUMMARY.md  build.sh  build_split.sh  run.sh
client/: CMakeLists.txt
client/include/: ClientMainWindow.h
client/src/: ClientMainWindow.cpp  main_client.cpp
include/: AudioCapture.h  AudioCodec.h  AudioDevice.h  AudioPlayback.h  Config.h  MainWindow.h  NetworkManager.h  VoiceChatClient.h
server/: CMakeLists.txt
server/include/: ServerMainWindow.h  UserManager.h
server/src/: ServerMainWindow.cpp  UserManager.cpp  main_server.cpp
src/: AudioCapture.cpp  AudioCodec.cpp  AudioDevice.cpp  AudioPlayback.cpp  MainWindow.cpp  MainWindow_old.cpp  NetworkManager.cpp  VoiceChatClient.cpp  main.cpp
